--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -3,4 +3,15 @@
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
+  <ul class="social-links">
+  {% if site.subscribe_rss %}
+    <li><a class="feed" href="{{ site.subscribe_rss }}" title="RSS"></a></li>
+  {% endif %}
+  {% if site.twitter_user %}
+    <li><a class="twitter" href="http://twitter.com/{{ site.twitter_user }}" title="Twitter" target="_black"></a></li>
+  {% endif %}
+  {% if site.github_user %}
+    <li><a class="github" href="https://github.com/{{ site.github_user }}" title="GitHub" target="_black"></a></li>
+  {% endif %}
+</ul>
 </hgroup>
