--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -44,3 +44,82 @@ header[role="banner"] {
 .subscription {
    display:none;
 }
+
+html {
+ background: white !important;
+}
+
+.entry-title {
+  font-size: 2.2em !important;
+  color: #21759b !important;
+}
+
+.entry-title > a {
+  position: relative;
+  text-decoration: none;
+}
+
+.entry-title > a:hover {
+  color: #21759b !important;
+  text-decoration: none;
+}
+
+.entry-title > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #21759b;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.entry-title > a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+a:visited {
+  color: #1863a1;
+}
+
+a:hover {
+  color: #0181eb;
+}
+
+aside.sidebar  .category-button {
+  display:inline-block;
+  margin: 0.6em 0.3em;
+  padding: 0;
+  text-shadow: 0 0;
+  
+  a {
+    color: #fff !important;
+    text-decoration: none;
+    background: #79A0C9;
+    padding: 0.3em 0.5em;
+  
+    border-top-left-radius: 0.5em;
+    border-bottom-left-radius: 0.5em;
+  }
+
+  a:hover {
+    color: #fff !important;
+    text-decoration: underline;
+  }
+  
+  .category-count {
+    background: #618FC0;
+    color: #fff !important;
+    padding: 0.3em 0.5em;
+  
+    border-top-right-radius: 0.5em;
+    border-bottom-right-radius: 0.5em;
+  }
+}
