--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -15,7 +15,6 @@ header[role="banner"] {
     float:left;
     margin-left: 5px;
     a {
-      
       width: 48px;
       height: 49px;
       display: block;
@@ -52,6 +51,14 @@ html {
 .entry-title {
   font-size: 2.2em !important;
   color: #21759b !important;
+}
+
+h2, h3, h4, h5, h6 {
+  color: #555555 !important;
+}
+
+h2 {
+  font-size: 1.35em !important;
 }
 
 .entry-title > a {
@@ -93,33 +100,37 @@ a:hover {
   color: #0181eb;
 }
 
-aside.sidebar  .category-button {
-  display:inline-block;
-  margin: 0.6em 0.3em;
-  padding: 0;
-  text-shadow: 0 0;
-  
-  a {
-    color: #fff !important;
-    text-decoration: none;
-    background: #79A0C9;
-    padding: 0.3em 0.5em;
-  
-    border-top-left-radius: 0.5em;
-    border-bottom-left-radius: 0.5em;
-  }
+aside.sidebar {
+  background: #f5f5f5;
 
-  a:hover {
-    color: #fff !important;
-    text-decoration: underline;
-  }
+  .category-button {
+    display:inline-block;
+    margin: 0.6em 0.3em;
+    padding: 0;
+    text-shadow: 0 0;
   
-  .category-count {
-    background: #618FC0;
-    color: #fff !important;
-    padding: 0.3em 0.5em;
+    a {
+      color: #fff !important;
+      text-decoration: none;
+      background: #79A0C9;
+      padding: 0.3em 0.5em;
   
-    border-top-right-radius: 0.5em;
-    border-bottom-right-radius: 0.5em;
+      border-top-left-radius: 0.5em;
+      border-bottom-left-radius: 0.5em;
+    }
+
+    a:hover {
+      color: #fff !important;
+      text-decoration: underline;
+    }
+  
+    .category-count {
+      background: #618FC0;
+      color: #fff !important;
+      padding: 0.3em 0.5em;
+  
+      border-top-right-radius: 0.5em;
+      border-bottom-right-radius: 0.5em;
+    }
   }
 }
