Theme work, open source page, updated about me

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,7 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-  <li><a href="{{ root_url }}/about-me">About</a></li>
+  <li><a href="{{ root_url }}/blog/categories">Categories</a></li>
+  <li><a href="{{ root_url }}/open-source-work">Open Source</a></li>\
+  <li><a href="{{ root_url }}/about-me">About Me</a></li>
 </ul>
