--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -134,3 +134,23 @@ aside.sidebar {
     }
   }
 }
+
+#content {
+    border-right: 0px;
+}
+
+#content > div {
+    padding-top: 0px;
+}
+
+#content > div >article {
+    padding-top: 0px;
+}
+
+#content > div > article.hentry {
+    padding-top: 2em;
+}
+#category-list > a {
+    margin: 10px;
+    display: inline-block;
+}
